# computer-club

./: CMakeLists.txt  README.md  example.txt  main.cpp
include/: FormatException.h  FormatExceptionDefine.h
include/objects/: Client.h  Time.h
include/system/: Dispatcher.h  SysEvent.h  SysEventExceptions.h
src/: Client.cpp  Dispatcher.cpp  FormatException.cpp  SysEvent.cpp  Time.cpp
tests/: event_client_incorrect.txt  event_correct_work_test2.txt  event_format_incorrect.txt  event_id_incorrect.txt  event_time_incorrect.txt  main_test.sh  n_tables_char.txt  n_tables_zero.txt  price_char.txt  price_zero.txt  time_incorrect_format.txt  time_left.txt
